# tgconnect

./: config.py  main.py  pyproject.toml  start.sh
handlers/: buffer.py  commands.py  files.py  start.py
tgconn/: tgconn
utils/: commands_db.py  filters.py  keyboards.py  logger.py  os_info.py  paste_buffer.py  setup_handlers.py
