[project]
name = "tgconnect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "logging>=0.4.9.6",
    "pyperclip>=1.9.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]
